--- a/CSS-hw2/0315HW.html
+++ b/CSS-hw2/0315HW.html
@@ -56,7 +56,7 @@
         <p>從網路商店架站到實體門市管理，只需要一個平台，就能輕鬆實現開店創業，<br>並能同步管
             理所有銷售管道，SHOPLINE 助你賣得更多、賣得更好！</p>
     </div>
-    <div class="about">
+    <div class="three">
         <div class="wrap">
             <div class="row">
                 <div class="pic">
@@ -145,7 +145,7 @@
             </div>
         </div>
     </div>
-    <div class="service">
+    <div class="four">
         <div class="wrap">
             <h2>更多功能與服務</h2>
             <div class="row">
@@ -184,7 +184,7 @@
             </div>
         </div>
     </div>
-    <div class="brand">
+    <div class="five">
         <h2>人氣品牌一致推薦使用</h2>
         <div class="wrap">
             <div class="item"><img src="https://picsum.photos/300/200/?random=10"></div>   
@@ -194,7 +194,7 @@
             <div class="item"><img src="https://picsum.photos/300/200/?random=1"></div>
         </div>   
     </div>
-    <div class="advertise">
+    <div class="six">
         <div class="row">
             <div class="pic">
                 <img src="https://img.shoplineapp.com/media/image_clips/5f06bed2436e2b86c4471215/original.jpg?1594277585" width="500" height="200">
@@ -206,10 +206,10 @@
             </div>
         </div>
     </div>
-    <div class="banner2">
+    <div class="seven">
         <img src="https://picsum.photos/300/200/?random=10"> 
     </div>
-    <div class="footer">
+    <div class="eight">
         <div class="group">
             <div class="col">
                 <h3>SHOPLINE</h3>
