--- a/CSS-hw2/0315HW-1.html
+++ b/CSS-hw2/0315HW-1.html
@@ -31,14 +31,16 @@
     <div class="two">
         <div class="left">
             <h2>想在哪開店創業？</h2>
+        <div class="left1">
             <h2>社群購物貼近零距離<br></h2>
             <p>
-                <br><br>超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！</p>
+                <br><br>超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路<br>零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！</p>
                 <br><br>
             <div class="input">
                 <input type="email" placeholder="請在此輸入電子信箱(可隨時更換)">
                 <a href="" class="free">免費試用</a>
             </div>
+        </div>
         </div>
         <div class="right"><img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/6191b397e9f2f00026722389/505x.webp?source_format=png"></div>    
     </div>
