--- a/CSS-hw2/0315HW-1.html
+++ b/CSS-hw2/0315HW-1.html
@@ -7,26 +7,34 @@
     <title>SHOPLINE 全球智慧開店平台｜完整開店功能讓你的生意不斷成長</title>
     <link rel="stylesheet" href="reset.css">
     <link rel = "stylesheet" href = "style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+ 
+        integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
+ 
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
-    <nav>
-        <button type="a">a</button>
+    <header>
+        <img src="https://fakeimg.pl/300x100/200">
+        <i class="fa-solid fa-globe"></i>
+
         <a href="#">幫助中心</a>
         <a href="#">登入網站</a>
+    </header>
+    <nav>
+        <a href="#">方案費用</a>
+        <a href="#">客戶案例</a>
+        <a href="#">開店說明會</a>
+        <a href="#">開店諮詢</a>
+        <a href="#">更多解決方案</a>
+        <a href="#">其他資源</a>
+        <a href="#">開店服務</a>
     </nav>
-    <div class="one">
-        <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE" width="160" height="27">
-        <ul>
-            <li class="a"><a href="#">方案費用</a></li>
-            <li class="a"><a href="#">客戶案例</a></li>
-            <li class="a"><a href="#">開店說明會</a></li>
-            <li class="a"><a href="#">開店諮詢</a></li>
-            <li class="a"><a href="#">更多解決方案</a></li>
-            <li class="a"><a href="#">其他資源</a></li>
-            <li class="a"><a href="#">開店服務</a></li>
-        </ul>
-        <a href="#" class="a1">免費試用</a>
+    <!-- <div class="one">
+        <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE" width="160" height="27"> -->
+    .btn-
+        <a href="#">免費試用</a>
     </div>
     <div class="two">
         <div class="left">
@@ -206,12 +214,13 @@
         <div class="group">
             <div class="col">
                 <h3>SHOPLINE</h3>
-                <div>關於我們</div>
-                <div>認識團隊</div>
-                <div>人才招募</div>
-                <div>合作機會</div>
-                <div>精選夥伴</div>
-                <div>媒體報導</div>
+                <a href="#">關於我們</a>
+                <a href="#">認識團隊</a>
+                <a href="#">人才招募</a>
+                <a href="#">合作機會</a>
+                <a href="#">精選夥伴</a>
+                <a href="#">媒體報導</a>
+
             </div>
             <div class="col">
                 <h3>我要開店</h3>
@@ -223,6 +232,8 @@
             </div>
             <div class="col">
                 <h3>功能特色</h3>
+                <a href="#">網路開店</a>
+
                 <div>網路開店</div>
                 <div>社群購物</div>
                 <div>零售 POS</div>
@@ -289,16 +300,5 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
