--- a/CSS HW2/0315HW.html
+++ b/CSS HW2/0315HW.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOPLINE 全球智慧開店平台｜完整開店功能讓你的生意不斷成長</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="../../reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="crossorigin="anonymous" >
     <link rel = "stylesheet" href = "style.css">
 
