--- a/CSS HW2/SHOPLINE.html
+++ b/CSS HW2/SHOPLINE.html
@@ -12,32 +12,35 @@
 </head>
 <body>
     <header>
-    <div class="black">
-        <div class="bar">
-            <i class="fa-solid fa-globe"></i>
-            <span>|</span>
-            <a href="#">幫助中心</a>
-            <a href="#">登入網站</a>
-        </div>
-    </div>
-    <div class="white">
-        <div class="tour">
-            <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE" width="160" height="27">
-            <div></div> 
-            <nav> 
-                <a href="#">方案費用</a>
-                <a href="#">客戶案例</a>
-                <a href="#">開店說明會</a>
-                <a href="#">開店諮詢</a>
-                <a href="#">更多解決方案</a>
-                <a href="#">其他資源</a>
-                <a href="#">開店服務</a>
-            </nav>
-            <div class="freetour">
-                <a href="#" class="a1">免費試用</a>
+        <div class="black">
+            <div class="bar">
+                <i class="fa-solid fa-globe"></i>
+                <span>|</span>
+                <a href="#">幫助中心</a>
+                <a href="#">登入網站</a>
             </div>
         </div>
-    </div>
+        <div class="white">
+            <div class="tour">
+                <div class="logo">
+                    <a href="#">
+                        <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE" width="160" height="27">
+                    </a>
+                </div>
+                <nav class="main-menu"> 
+                    <a href="#">方案費用</a>
+                    <a href="#">客戶案例</a>
+                    <a href="#">開店說明會</a>
+                    <a href="#">開店諮詢</a>
+                    <a href="#">更多解決方案</a>
+                    <a href="#">其他資源</a>
+                    <a href="#">開店服務</a>
+                </nav>
+                <div class="freetour">
+                    <a href="#" class="a1">免費試用</a>
+                </div>
+            </div>
+        </div>
     </header>
 
 
@@ -49,8 +52,8 @@
                     <p>超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！</p>
                     <div class="input">
                         <input type="email" placeholder="請在此輸入電子信箱(可隨時更換)">
-                    </div>
-                    <a href="" class="free">免費試用</a>
+                        <a href="" class="free">免費試用</a>
+                        </div>
                 </div>
                 <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/6191b397e9f2f00026722389/505x.webp?source_format=png">   
             </div>
@@ -65,7 +68,7 @@
             <div class="wrap">
                 <div class="row">
                     <div class="info">
-                        <h3>免寫程式、多款版型<br>輕鬆打造全能電商網站</h3>
+                        <h2>免寫程式、多款版型<br>輕鬆打造全能電商網站</h2>
                         <P>~~~~</P>
                         <p>不會寫程式也能輕鬆架設品牌電商官網！任何產業都能找到合適的專業設計版型，以滑鼠拖曳就能完成網頁編輯，讓架設網站就像堆積木一樣簡單。</p>
                         <div class="list">
@@ -103,7 +106,7 @@
                         <img src="https://img.shoplineapp.com/media/image_clips/60a4d354a8bff100235bea59/original.png?1621414740">
                     </div>
                     <div class="info">
-                        <h3>支持海內外電商金流、物流一次搞定</h3>
+                        <h2>支持海內外電商金流、物流一次搞定</h2>
                         <P>~~~</P>
                         <p>支持在地及國際金流、物流串接服務，提供海內外顧客最便利的付款及送貨服務，加速消費者完成下單交易，大幅降低購物車放棄率！</p>
                         <div class="list">
@@ -135,7 +138,7 @@
                 </div>
                 <div class="row">
                     <div class="info">
-                        <h3>刺激下單，創造回購行銷導流、促購模組任你玩</h3>
+                        <h2>刺激下單，創造回購行銷導流、促購模組任你玩</h2>
                         <P>~~~</P>
                         <p>多元優惠活動、會員集客機制、網紅分潤以及直播購物等豐富功能，將電商行銷玩法一網打盡，助你成功優化行銷活動成效，刺激顧客下單、吸引鐵粉回購！</p>
                         <div class="list">
@@ -174,7 +177,7 @@
                         <img src="https://img.shoplineapp.com/media/image_clips/60a4d3540289ef002f2150cb/original.png?1621414740">
                     </div>
                     <div class="info">
-                        <h3>O2O 全通路無縫整併輕鬆管理網店、門市以及其他通路</h3>
+                        <h2>O2O 全通路無縫整併輕鬆管理網店、門市以及其他通路</h2>
                         <p>~~~</p>
                         <p>不論是網店拓展門市，還是門市想發展網路生意，從商品、庫存、訂單等各項虛實店舖的資料都能完善整併，輕鬆實現全通路會員經營到多店營運。</p>
                         <div class="list">
@@ -251,7 +254,6 @@
             <div class="pop">
                 <h2>
                     <span>人氣品牌</span>一致推薦使用</h2>
-            </div>
                 <div class="popularity">
                     <ul>
                         <li>
@@ -267,8 +269,9 @@
                     </ul>        
                 </div>
             </div>
-            
-        <div class="home-content">
+        <!-- </div> -->
+
+        <div class="brand">
             <div class="bonny">
                 <a href="#">bonnyread.com.tw -></a>
                 <p>SHOPLIN 在行動裝置上操作的順暢度很高；使用者給的建議與意見<br>會採納，處理的速度也不錯；還一直有新功能推出，不斷成長。</p>
