--- a/Project/Today.html
+++ b/Project/Today.html
@@ -682,7 +682,7 @@
                             <h5 class="card-title ps-1 py-2 my-2">7991 </h5>
                             <p class="experience-itinerary p-2 my-2">項體驗行程</p>
                             <span class="chip rounded-pill border border-dark my-2 py-2">
-                                
+
                                 <a href="#" class="a ms-3 text-decoration-none">飯店</a>
                                 <span class="delete-chip mx-2">X</span>
                             </span>
@@ -709,6 +709,13 @@
                                     <span class="label label-addational rounded-3 ">3天前可免費取消</span>
                                     <span class="label label-addational rounded-3 ">即買即用</span>
                                 </div>
+                                <a href="#hide"
+                                    onclick="if(document.getElementById('hide') .style.display=='none') {document.getElementById('hide') .style.display=''}else{document.getElementById('hide') .style.display='none'}"
+                                    title="" type="button">點我展開／隱藏(方法二)</a>
+                                <div id="hide" style="display: none;"
+                                    年初推行大型企劃『Xbook～流向我們的物語』，透過五官享受海底之書的魅力！加碼推出兒童節限定「Xpark童樂套票」及互動式猜謎遊戲，讓大小朋友在春天開心暢遊，體驗豐富的寓教於樂內容！>
+                                </div>
+
                                 <p class="card-text-info pt-3 pb-2 lh-base ">Xpark 於 2022
                                     年初推行大型企劃『Xbook～流向我們的物語』，透過五官享受海底之書的魅力！加碼推出兒童節限定「Xpark童樂套票」及互動式猜謎遊戲，讓大小朋友在春天開心暢遊，體驗豐富的寓教於樂內容！
                                 </p>
