--- a/Project/Today.html
+++ b/Project/Today.html
@@ -698,7 +698,8 @@
                         <div class="col-md-8 rounded-3 ">
                             <div class="card-body">
                                 <h2 class="card-title">桃園青埔 | Xpark 都會型水生公園門票</h2>
-                                <div class="card-point ">
+                                <div class="card-point "> 
+                                
                                     <span class="label label-addational rounded-3 ">即買即用</span>
                                     <span class="label label-addational rounded-3 ">6天前可免費取消</span>
 
@@ -711,11 +712,10 @@
                                 </div>
                                 <a href="#hide"
                                     onclick="if(document.getElementById('hide') .style.display=='none') {document.getElementById('hide') .style.display=''}else{document.getElementById('hide') .style.display='none'}"
-                                    title="" type="button">點我展開／隱藏(方法二)</a>
+                                    title="" type="button">...</a>
                                 <div id="hide" style="display: none;"
                                     年初推行大型企劃『Xbook～流向我們的物語』，透過五官享受海底之書的魅力！加碼推出兒童節限定「Xpark童樂套票」及互動式猜謎遊戲，讓大小朋友在春天開心暢遊，體驗豐富的寓教於樂內容！>
                                 </div>
-
                                 <p class="card-text-info pt-3 pb-2 lh-base ">Xpark 於 2022
                                     年初推行大型企劃『Xbook～流向我們的物語』，透過五官享受海底之書的魅力！加碼推出兒童節限定「Xpark童樂套票」及互動式猜謎遊戲，讓大小朋友在春天開心暢遊，體驗豐富的寓教於樂內容！
                                 </p>
