--- a/Project copy/think3.html
+++ b/Project copy/think3.html
@@ -30,15 +30,17 @@
             background-color: #fff;
             padding: 50px 40px 20px 40px;
         }
-        .container{
+
+        .container {
             position: relative;
             width: 100%;
             height: 100px;
             border: 1px solid black;
             margin-top: 30px;
         }
-        input[type="range"]{
-            -webkit-appearance:none ;
+
+        input[type="range"] {
+            -webkit-appearance: none;
             -moz-appearance: none;
         }
     </style>
@@ -52,6 +54,20 @@
 
         </div>
     </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="_P">
+        <label class="form-check-label" for="_P">
+            Indeterminate checkbox
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+            Indeterminate checkbox
+        </label>
+    </div>
+
 </body>
 
 </html>
