--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>我的CSS作業</h1>
     <ul>
         <li>
-            <a href="./CSS_hw1/0311-hw.html">作業一，切課表</a>
+            <a href="./CSS HW1/0311.html">切版作業一，課表</a>
         </li>
-        <!-- <li>
-            <a href="./CSS-hw2/0315HW-1.html">作業二，shopline官網</a>
-        </li> -->
+        <li>
+            <a href="./CSS HW2/SHOPLINE.html">切版作業二，shopline官網</a>
+        </li>
+        <li>
+            <a href="./CSS HW2/SHOPLINE.html">切版作業三，Toyota(position)官網</a>
+        </li>
+        <li>
+            <a href="./CSS HW2/SHOPLINE.html">切版作業三，Toyota(grid)官網</a>
+        </li>
+        <li>
+            <a href="./CSS HW2/SHOPLINE.html">切版作業四，Shopline(RWD)</a>
+        </li>
+    </ul>
+    <h1>我的SQL作業</h1>
+    <ul>
+        <li>
+            <a
+                href="https://docs.google.com/spreadsheets/d/1hbSXZjl-DbGYh_amLu7q7gSc3zC8HuwEhVzsC8pcRAE/edit?usp=sharing">正規化，台鐵時刻表</a>
+        </li>
+        <li><a
+                href="https://docs.google.com/spreadsheets/d/1hbSXZjl-DbGYh_amLu7q7gSc3zC8HuwEhVzsC8pcRAE/edit?usp=sharing">正規化，設計PCHOME網站所需資料表</a>
+        </li>
     </ul>
     <h1>我的JS作業</h1>
     <ul>
-        <li></li>
-        <li></li>
+        <li><a href="./JShw3/Pokemon.HTML">作業一，POKEMON</a></li>
+        <li><a href="./JShw2/lol.html">作業一，英雄聯盟（DOM-->資料)（資料-->文字/表格)</a></li>
+        <li><a href="./JShw4/Piecompain.html">作業一，公司資料建表格</a></li>
+        <li><a href="./01ultimate_password.HTML">JS黑客松，終極密碼</a></li>
+        <li><a href="./02computer.html">JS黑客松
+                計算機</a></li>
+        <li><a href="./JShw5/apple.html">Apple產品頁</a></li>
+        <li><a href="./JShw6/Template_lol.html">英雄聯盟（AJAX+template）</a></li>
+        <li><a href="./">考核題，ToDoList</a></li>
+
 
     </ul>
 
 </body>
+
 </html>
