--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <a href="./CSS HW2/SHOPLINE.html">切版作業二，shopline官網</a>
         </li>
         <li>
-            <a href="./CSS HW2/SHOPLINE.html">切版作業三，Toyota(position)官網</a>
+            <a href="./grid/Toyota_grid.html">切版作業三，Toyota(position)官網</a>
         </li>
         <li>
-            <a href="./CSS HW2/SHOPLINE.html">切版作業三，Toyota(grid)官網</a>
+            <a href="./grid/Toyota_grid.html">切版作業三，Toyota(grid)官網</a>
         </li>
         <li>
             <a href="./CSS HW2/SHOPLINE.html">切版作業四，Shopline(RWD)</a>
@@ -39,17 +39,16 @@
     </ul>
     <h1>我的JS作業</h1>
     <ul>
-        <li><a href="./JShw3/Pokemon.HTML">作業一，POKEMON</a></li>
-        <li><a href="./JShw2/lol.html">作業一，英雄聯盟（DOM-->資料)（資料-->文字/表格)</a></li>
-        <li><a href="./JShw4/Piecompain.html">作業一，公司資料建表格</a></li>
+        <li><a href="./JShw1/js_hw1.html">作業一，連假自介(請動態生成資料)</a></li>
+        <li><a href="./JShw2/lol.html">作業二，英雄聯盟（DOM-->資料)（資料-->文字/表格)</a>
+        </li>
+        <li><a href="./JShw3/Pokemon.HTML">作業三，POKEMON</a></li>
+        <li><a href="./JShw4/Piecompain.html">作業四，公司資料建表格</a></li>
         <li><a href="./01ultimate_password.HTML">JS黑客松，終極密碼</a></li>
-        <li><a href="./02computer.html">JS黑客松
-                計算機</a></li>
-        <li><a href="./JShw5/apple.html">Apple產品頁</a></li>
+        <li><a href="./02computer.html">JS黑客松，計算機</a></li>
+        <li><a href="./JShw5/apple.html">作業五，Apple產品頁</a></li>
         <li><a href="./JShw6/Template_lol.html">英雄聯盟（AJAX+template）</a></li>
-        <li><a href="./">考核題，ToDoList</a></li>
-
-
+        <li><a href="./Quiz/todolist.html">考核題，ToDoList</a></li>
     </ul>
 
 </body>
