--- a/JShw1/js_hw1.html
+++ b/JShw1/js_hw1.html
@@ -62,11 +62,11 @@
             // let img = document.getElementById("image1");
 
             let my_pic="小楊";
-            const photoUrl="https://raw.githubusercontent.com/LittleY11/FileStorage/main/d0fe8c094accb5f217ce0135538c0aba-4096x2209-bff68f8f-1646815031.jpeg";
+            const photoUrl="https://raw.githubusercontent.com/LittleY11/FileStorage/main/%E7%85%A7%E7%89%87/66E00CB2-F39E-424A-BBF9-E4B76DC7764D.jpg";
 
-            button1.innerText = "姓名:小楊";
-            button2.innerText = "email:build.gmail.com";
-            button3.innerText = "學校:中華";
+            button1.innerText = "姓名:楊子慧";
+            button2.innerText = "綽號:小楊";
+            button3.innerText = "email:maigo10363@gmail.com";
             button4.innerText = "興趣:打羽球";
             
             // h1.innerText = moviename;
@@ -89,7 +89,6 @@
             imageArray.forEach((url,index)=>{
                 // document.write(url + "<br>");
                 pic.innerHTML +=`<img src = ${url}> `;
-
             });
 
 
