--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>小楊的作品集</title>
 </head>
 
 <body>
     <h1>我的CSS作業</h1>
     <ul>
         <li>
-            <a href="./CSS HW1/0311.html">切版作業一，課表</a>
+            <a href="./CSS/hw1/0311.html">切版作業一，課表</a>
         </li>
         <li>
-            <a href="./CSS HW2/SHOPLINE.html">切版作業二，shopline官網</a>
+            <a href="./CSS/hw2/SHOPLINE.html">切版作業二，shopline官網</a>
         </li>
         <li>
-            <a href="./grid/Toyota_grid.html">切版作業三，Toyota(position)官網</a>
+            <a href="./CSS/hw3/position/Toyota position.html">切版作業三，Toyota(position)官網</a>
         </li>
         <li>
-            <a href="./grid/Toyota_grid.html">切版作業三，Toyota(grid)官網</a>
+            <a href="./CSS/hw3/grid/Toyota_grid.html">切版作業三，Toyota(grid)官網</a>
         </li>
         <li>
-            <a href="./CSS HW2/SHOPLINE.html">切版作業四，Shopline(RWD)</a>
+            <a href="./CSS/hw4/shopline_RWD.html">切版作業四，Shopline(RWD)</a>
         </li>
     </ul>
     <h1>我的SQL作業</h1>
