--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
     </ul>
     <h1>我的JS作業</h1>
     <ul>
-        <li><a href="./JShw1/js_hw1.html">作業一，連假自介(請動態生成資料)</a></li>
-        <li><a href="./JShw2/lol.html">作業二，英雄聯盟（DOM-->資料)（資料-->文字/表格)</a>
+        <li><a href="./JS/JShw1/js_hw1.html">作業一，連假自介(請動態生成資料)</a></li>
+        <li><a href="./JS/JShw2/lol.html">作業二，英雄聯盟（DOM-->資料)（資料-->文字/表格)</a>
         </li>
-        <li><a href="./JShw3/Pokemon.HTML">作業三，POKEMON</a></li>
-        <li><a href="./JShw4/Piecompain.html">作業四，公司資料建表格</a></li>
+        <li><a href="./JS/JShw3/Pokemon.HTML">作業三，POKEMON</a></li>
+        <li><a href="./JS/JShw4/Piecompain.html">作業四，公司資料建表格</a></li>
         <li><a href="./01ultimate_password.HTML">JS黑客松，終極密碼</a></li>
         <li><a href="./02computer.html">JS黑客松，計算機</a></li>
-        <li><a href="./JShw5/apple.html">作業五，Apple產品頁</a></li>
-        <li><a href="./JShw6/Template_lol.html">英雄聯盟（AJAX+template）</a></li>
+        <li><a href="./JS/JShw5/apple.html">作業五，Apple產品頁</a></li>
+        <li><a href="./JS/JShw6/Template_lol.html">作業六，英雄聯盟（AJAX+template）</a></li>
         <li><a href="./Quiz/todolist.html">考核題，ToDoList</a></li>
     </ul>
 
